# webapp

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
assets/: .gitkeep
backend/: Cargo.toml
backend/src/: main.rs
crates/backend/src/: main.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: main.rs
crates/frontend/web/: index.html
frontend/: Cargo.toml
frontend/src/: main.rs
html/: index.html
scripts/: build.js  clean.js  install.js  run.js
